Fix sticky footer
so that when the keyboard pops up, the footer doesn't overlap with the
input fields

--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,15 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 90px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 6em;
+  height: 90px;
 }
